depending on newer sbt-docker adding java opts and stuff